APIs/azure.com/servicefabric/6.1.2/python-client/docs/DeployedApplicationHealthEvaluation.md
# DeployedApplicationHealthEvaluation

Represents health evaluation for a deployed application, containing information about the data and the algorithm used by the health store to evaluate health. 

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**application_name** | **str** | The name of the application, including the &#39;fabric:&#39; URI scheme. | [optional] 
**node_name** | **str** | The name of a Service Fabric node. | [optional] 
**unhealthy_evaluations** | [**List[HealthEvaluationWrapper]**](HealthEvaluationWrapper.md) | List of health evaluations that resulted in the current aggregated health state. | [optional] 

## Example

```python
from openapi_client.models.deployed_application_health_evaluation import DeployedApplicationHealthEvaluation

# TODO update the JSON string below
json = "{}"
# create an instance of DeployedApplicationHealthEvaluation from a JSON string
deployed_application_health_evaluation_instance = DeployedApplicationHealthEvaluation.from_json(json)
# print the JSON string representation of the object
print(DeployedApplicationHealthEvaluation.to_json())

# convert the object into a dict
deployed_application_health_evaluation_dict = deployed_application_health_evaluation_instance.to_dict()
# create an instance of DeployedApplicationHealthEvaluation from a dict
deployed_application_health_evaluation_from_dict = DeployedApplicationHealthEvaluation.from_dict(deployed_application_health_evaluation_dict)
```
[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


